--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,7 @@ h3 {
     list-style-type: none;
     height: 50px;
     line-height: 50px;
+    display: block;
 }
 
 .nav-list li a {
@@ -257,40 +258,6 @@ h3 {
     .abt-section + .abt-section {
         margin-bottom: 2em;
     }
-}
-
-/* footer style */
-
-footer {
-    background: #111;
-    color: var(--clr-light);
-    text-align: center;
-    padding: 0em 0;
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-}
-
-.footer-items {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-
-.footer-items .footer_item a {
-    text-decoration: none;
-    font-size:var(--fs-h3);
-}
-
-.footer-items li a i {
-    font-size: var(--fs-icons);
-    color: var(--clr-light);
-    margin: 0.75em 2em;
-}
-
-.footer-items li a i:hover {
-    color: var(--clr-superbright);
 }
 
 /* when links are hovered over, change color */
